@@ -7,6 +7,9 @@ offlineimap (3.2.2) unstable; urgency=low
     a change, but not propogate it.  New config variable ignore-readonly
     can suppress the warnings.  This fixes [complete.org #10] and,
     for Debian, Closes: #154769.
+  * If a given Maildir folder is new, remove the associated local status
+    cache file, if any.  That way, there will not be any chance of
+    propogating hordes of deletes and adds based on old status data.
 
  -- John Goerzen <jgoerzen@complete.org>  Thu, 25 Jul 2002 08:22:25 -0500
 
